log
Wed 08 May 2024 12:55:29 AM UTC: 
 tests:  1|8
total_score: 0/70
7e5b78c
Wed 08 May 2024 12:57:04 AM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
df78593
Wed 08 May 2024 01:00:34 AM UTC: 
 treemap.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:62:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   62 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4912a41
Wed 08 May 2024 01:00:51 AM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  4|7
total_score: 5/70
f35ed74
Wed 08 May 2024 01:06:18 AM UTC: 
 treemap.c | 38 ++++++++++++++++++++++++++++----------
 1 file changed, 28 insertions(+), 10 deletions(-)
 tests:  5|7
total_score: 5/70
a25717e
Wed 08 May 2024 01:07:14 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|7
total_score: 5/70
87f6a03
Wed 08 May 2024 01:08:00 AM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  6|6
total_score: 15/70
f18e181
Wed 08 May 2024 01:08:45 AM UTC: 
 treemap.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:91:19: error: ‘aux’ undeclared (first use in this function)
   91 |     new->parent = aux;
      |                   ^~~
treemap.c:91:19: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a7cd2fe
Wed 08 May 2024 01:09:09 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
2df8044
Wed 08 May 2024 01:10:20 AM UTC: 
 treemap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
f02fbef
Wed 08 May 2024 01:12:54 AM UTC: 
 treemap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:120:63: error: expected ‘)’ before ‘{’ token
  120 |         if (tree->lower_than(node->pair->key, temp->pair->key) {
      |            ~                                                  ^~
      |                                                               )
treemap.c:126:5: error: expected expression before ‘}’ token
  126 |     }
      |     ^
treemap.c:114:15: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
  114 |     TreeNode *parent = NULL;
      |               ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4fe136b
Wed 08 May 2024 01:13:30 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:114:15: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
  114 |     TreeNode *parent = NULL;
      |               ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
9a71581
Wed 08 May 2024 01:21:18 AM UTC: 
 treemap.c | 50 ++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 50 insertions(+)
 tests:  8|5
total_score: 15/70
e23b4f2
Wed 08 May 2024 01:23:33 AM UTC: 
 treemap.c | 17 ++++++-----------
 1 file changed, 6 insertions(+), 11 deletions(-)
 tests:  8|5
total_score: 15/70
02e7b45
Wed 08 May 2024 01:24:52 AM UTC: 
 treemap.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  8|5
total_score: 15/70
a86214a
Wed 08 May 2024 01:25:46 AM UTC: 
 treemap.c | 91 ++++++++++++++++++++++-----------------------------------------
 1 file changed, 31 insertions(+), 60 deletions(-)
 tests:  8|5
total_score: 15/70
83236dc
Wed 08 May 2024 01:29:01 AM UTC: 
 treemap.c | 84 +++++++++++++++++++++++++++++++++++++++++----------------------
 1 file changed, 55 insertions(+), 29 deletions(-)
 tests:  8|5
total_score: 15/70
167a811
Wed 08 May 2024 01:30:02 AM UTC: 
 treemap.c | 18 ++++++++++++------
 1 file changed, 12 insertions(+), 6 deletions(-)
 tests:  8|5
total_score: 15/70
ab1d615
Wed 08 May 2024 01:36:38 AM UTC: 
 treemap.c | 34 ++++++++++++++++++----------------
 1 file changed, 18 insertions(+), 16 deletions(-)
 tests:  8|5
total_score: 15/70
c178198
Wed 08 May 2024 01:38:04 AM UTC: 
 treemap.c | 91 +++++++++++++++++++++------------------------------------------
 1 file changed, 30 insertions(+), 61 deletions(-)
 tests:  8|5
total_score: 15/70
ffb805c
Wed 08 May 2024 01:41:06 AM UTC: 
 treemap.c | 80 ++++++++++++++++++++++++++++++++++++++-------------------------
 1 file changed, 48 insertions(+), 32 deletions(-)
 tests:  8|5
total_score: 15/70
4cbcf54
Wed 08 May 2024 01:45:32 AM UTC: 
 treemap.c | 53 ++++++++++++-----------------------------------------
 1 file changed, 12 insertions(+), 41 deletions(-)
 tests:  8|5
total_score: 15/70
ff43b05
Wed 08 May 2024 01:46:28 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
6a28b1a
Wed 08 May 2024 01:46:50 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
84f0114
Wed 08 May 2024 01:49:21 AM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  10|4
total_score: 20/70
a04b24e
Wed 08 May 2024 01:52:58 AM UTC: 
 treemap.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
 tests:  15|3
total_score: 35/70
6568140
Wed 08 May 2024 02:03:43 AM UTC: 
 treemap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|0
3eb6b1c
Wed 08 May 2024 02:04:02 AM UTC: 
 treemap.c | 14 +++-----------
 1 file changed, 3 insertions(+), 11 deletions(-)
 tests:  15|3
total_score: 35/70
1423aaf
Wed 08 May 2024 02:07:56 AM UTC: 
 treemap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  0|0
657e787
Wed 08 May 2024 02:08:33 AM UTC: 
 treemap.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
 tests:  0|0
78299c4
Wed 08 May 2024 02:08:49 AM UTC: 
 treemap.c | 13 -------------
 1 file changed, 13 deletions(-)
 tests:  15|3
total_score: 35/70
a7dd082
Wed 08 May 2024 02:09:27 AM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|0
5792fd7
Wed 08 May 2024 02:09:51 AM UTC: 
 treemap.c | 28 +---------------------------
 1 file changed, 1 insertion(+), 27 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:113:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  113 |     return NULL;
      |            ^~~~
treemap.c:111:6: note: declared here
  111 | void removeNode(TreeMap * tree, TreeNode* node) {
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2ccbac5
Wed 08 May 2024 02:10:18 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  22|2
total_score: 45/70
9532cb6
Wed 08 May 2024 02:11:17 AM UTC: 
 treemap.c | 11 ++---------
 1 file changed, 2 insertions(+), 9 deletions(-)
 tests:  15|3
total_score: 35/70
0f821f2
Wed 08 May 2024 02:12:28 AM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  22|2
total_score: 45/70
c5b6f8e
Wed 08 May 2024 02:13:50 AM UTC: 
 treemap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  23|2
total_score: 45/70
77f78cf
Wed 08 May 2024 02:14:37 AM UTC: 
 treemap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  22|2
total_score: 45/70
a617dcb
